HELIO-4571 - Assorted site and press specific UI fixes: Search and Browse books margin-top reduced; fix oversized external resource svg icons; BAR facet link color restored; Sussex list gallery icons; MichELT header and buttons restored; Add border below nav for various MPS and UMP subpresses; break lines on long press titles in header; make admin menu visible on dark banners

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -448,6 +448,10 @@ footer.press {
 }
 .press {
 
+  h2 {
+    margin-top: 0px !important;
+  }
+
   // reduce standard button size for dropdowns/sorts
   .search-widgets {
     font-size: 14px;
@@ -1346,6 +1350,7 @@ footer.press {
 
       .external-resource-link {
         text-align: center;
+        word-break: break-word;
       }
 
       .index-document-functions {
